--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   Build_Atifact:
     name: 'Build Artifact and Push to S3'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest 
     steps:
     #Using versioned actions 
@@ -46,8 +47,8 @@ jobs:
         aws s3 cp deploy.zip s3://nodejsartifactsdeploy/deploy.zip
   terraform:
     runs-on: ubuntu-latest
-    needs: Build_Atifact    
-    if: github.event_name == 'push' || github.event_name == 'pull_request'
+    if: github.event_name == 'push'
+    needs: Build_Atifact
     defaults:
       run:
         working-directory: ./terraform   
