--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   Build_Atifact:
     name: 'Build Artifact and Push to S3'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest 
     steps:
     #Using versioned actions 
@@ -47,7 +48,7 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     needs: Build_Atifact    
-    if: github.event_name == 'push' || github.event_name == 'pull_request'
+    if: github.event_name == 'push'
     defaults:
       run:
         working-directory: ./terraform   
